[project]
name = "tkable"
version = "1.0.0"
description = "Simple and beginner-friendly table widget for Tkinter"
authors = [
    {name = "Abdullah Sameh", email = "abdullah.sameh.101208@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"

keywords = ["tkinter", "table", "gui", "datatable", "ui"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces"
]

[project.urls]
Homepage = "https://github.com/AbdullahSameh10/tkable"
Issues = "https://github.com/AbdullahSameh10/tkable/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"